@@ -1,5 +1,9 @@
 2008-02-06  Thomas Heller  <theller@python.net>
 
+	* The badly named comtypes.client.wrap function was renamed into
+	comtypes.client.GetBestInterface.  For backwards compatibility the
+	old name stays as an alias.
+	
 	* Replaced the comtypes.messageloop.add_filter(filter) function
 	with comtypes-messageloop.insert_filter(index, filter).  This
 	allows to specify the order in which the filters are applied.
